--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.service_bg {
+  background-image: url(../public/about.jpg);
+}
+.about_bg {
+  background-image: url(../public/about.jpg);
+}
